--- a/invitroTKstats/vignettes/Caco2_vignette.Rmd
+++ b/invitroTKstats/vignettes/Caco2_vignette.Rmd
@@ -15,7 +15,13 @@ knitr::opts_chunk$set(
 
 ## Introduction 
 
-This vignette guides users on how to estimate apparent membrane permeability (P~app~) from Caco-2 data. Apparent membrane permeability is a chemical specific parameter that describes the general transport of the chemical through a membrane (Honda et al. 2024). 
+This vignette guides users on how to estimate apparent membrane permeability (P~app~) from mass spectrometry data. Apparent membrane permeability is a chemical specific parameter that describes the general transport of the chemical through a membrane (Honda et al. 2024). 
+
+The mass spectrometry data should be collected from a Caco-2 assay in which the test compound was added to either the apical or basolateral side of a confluent and differentiated Caco-2 cell monolayer as seen in Figure 1 (Honda et al. 2024). 
+
+```{r, echo = FALSE, out.width = "60%", fig.cap = "Fig 1: Cl~int~ experimental set up", fig.topcaption = TRUE, fig.align = "center"}
+knitr::include_graphics("Caco2_diagram.png")
+```
 
 ### Suggested packages for use with this vignette 
 ```{r setup, message = FALSE}
@@ -23,8 +29,7 @@ This vignette guides users on how to estimate apparent membrane permeability (P~
 library(invitroTKstats)
 # Data manipulation and plotting packages 
 library(dplyr)
-library(kableExtra)
-
+library(flextable)
 ```
 
 ## Load Data 
@@ -35,36 +40,141 @@ First, we load in the example dataset from invitroTKstats.
 data("Caco2-example")
 ```
 
-Three datasets are loaded in: `caco2_L0`, `caco2_L1`, and `caco2_L2`. These datasets are Caco-2 data at Level 0, 1, and 2 respectively. For the purpose of this vignette, we'll start with `caco2_L0`, displayed below, to demonstrate the complete pipelining process. Further, the `caco2_L0` data has already been processed with the `merge_level0` function. For more details on curating raw data to Level 0 data, see "Creating dataguide from raw data vignette".
+Three datasets are loaded in: `caco2_L0`, `caco2_L1`, and `caco2_L2`. These datasets are Caco-2 data at Level 0, 1, and 2 respectively. For the purpose of this vignette, we'll start with `caco2_L0`, the Level 0 data, to demonstrate the complete pipelining process. 
 
-```{r, echo = FALSE}
-# Level 0 data 
+`caco2_L0` is the output from the `merge_level0` function which compiles raw lab data from specified Excel files into a singular data frame. The data frame contains exactly one row per sample with information obtained from the mass spectrometer. For more details on curating raw lab data to a singular Level 0 data frame, see "Creating dataguide from raw data vignette". 
+
+The following table displays the first three rows of `caco2_L0`, our Level 0 data.
+
+```{r, echo = FALSE, tab = 1}
 head(caco2_L0, n = 3) %>% 
-  kable(caption = "Level 0 data") %>% 
-  scroll_box(width = "100%")
+  flextable() %>% 
+  bg(bg = "#DDDDDD", part = "header") %>% 
+  autofit() %>% 
+  set_table_properties(
+    opts_html = list(
+      scroll = list(
+        height = 200
+      )
+      )
+  ) %>% 
+  set_caption(caption = "Table 1: Level 0 data",
+              align_with_table = FALSE) %>% 
+  theme_vanilla
 ```
-
-Level 0 data can be described as the initial transformation from the raw data to a more standardized data frame with exactly one row per tested chemical. Information that is specific to each chemical such as the volumes of the experimental receiver and donor wells, the initial concentrations, and the mass spectrometry peak areas on the receiver side are included.  
 
 ## Level 1 processing
 
-To transform our chemical specific information into a standardized data frame that includes more assay specific information, we must undergo Level 1 processing using `format_caco2`. This function ensures all required columns are provided and then standardizes the column names.  
-
-
+`format_caco2` is the Level 1 function used to create a standardized data frame. This level of processing is necessary because naming conventions or formatting can differ across data sets. 
 
 If the Level 0 data already contains the required column, then the existing column name can be specified. For example, `caco2_L0` already contains a column specifying the sample name called "Sample". However, the default column name for sample name is "Lab.Sample.Name". Therefore, we specify the correct column with `sample.col = "Sample"`. In general, to specify an already existing column that differs from the default, the user must use the parameter with the `.col` suffix. 
 
-If the Level 0 data does not already contain the required column, then the column can be populated with a single value. For example, `caco2_L0` does not contain a column specifying biological replicates. Therefore, we populate the required column with `biological.replicates = 1`. In general, to specify a single value for an entire column, the user must use the  parameter without the `.col` suffix. 
+If the Level 0 data does not already contain the required column, then the column can be populated with a single value. For example, `caco2_L0` does not contain a column specifying biological replicates. Therefore, we populate the required column with `biological.replicates = 1`. In general, to specify a single value for an entire column, the user must use the  parameter without the `.col` suffix.
+
+Users should be mindful if they choose to specify a single value for all of their samples and verify that that is the action they wish to take. 
 
 Some columns must be present in the Level 0 data while others can be filled with a single value. At minimum, the following columns must be present in the Level 0 data and specified as single entry is not permitted: `sample.col`, `lab.compound.col`, `date.col`, `compound.col`, `area.col`, `istd.col`, `type.col`, `direction.col`, `receiver.vol.col`, `donor.vol.col`, and `note.col`, 
 
 The rest of the following columns may either be specified from the Level 0 data or filled with a single value: `membrane.area.col` or `membrane.area`, `compound.conc.col` or `compound.conc`, `cal.col` or `cal`, `dilution.col` or `dilution`, `time.col` or `time`, `istd.name.col` or `istd.name`, `istd.conc.col` or `istd.conc`, `nominal.test.conc.col` or `nominal.test.conc`, `biological.replicates.col` or `biological.replicates`, `analysis.method.col` or `analysis.method`, `analysis.instrument.col` or `analysis.instrument`, `analysis.parameters.col` or `analysis.parameters`, `level0.file.col` or `level0.file`, and `level0.sheet.col` or `level0.sheet`.
 
-We will also set `output.res = FALSE` so that the .tsv file is not saved to our current working directory. 
+```{r required cols, echo = FALSE}
+# Create a table of required parameters for Level 1
+
+req_cols <- data.frame(matrix(nrow = 33, ncol = 4))
+vars <- c("Parameter", "Required in L0?", "Corresp. single-entry Parameter", "Descr.")
+colnames(req_cols) <- vars
+
+# Parameter names 
+parameters <- c("FILENAME", "data.in", "sample.col", "lab.compound.col", "dtxsid.col", "date.col", 
+                "compound.col", "area.col", "istd.col", "type.col", "direction.col", "membrane.area.col",
+                "receiver.vol.col", "donor.vol.col", "compound.conc.col", "cal.col", "dilution.col",
+                "time.col", "istd.name.col", "istd.conc.col", "nominal.test.conc.col", "biological.replicates.col",
+                "technical.replicates.col", "analysis.method.col", "analysis.instrument.col", "analysis.parameters.col",
+                "note.col", "level0.file.col", "level0.sheet.col", "output.res", "save.bad.types", "INPUT.DIR", "OUTPUT.DIR")
+req_cols[, "Parameter"] <- parameters
+
+# Parameter required in L0?
+req_cols <- req_cols %>% 
+  mutate("Required in L0?" = case_when(
+    Parameter %in% c("sample.col", "lab.compound.col", "dtxsid.col", "date.col", "compound.col", "area.col", "istd.col", 
+  "type.col", "direction.col", "receiver.vol.col", "donor.vol.col", "note.col") ~ "Y",
+  Parameter %in% c("FILENAME", "data.in", "output.res", "save.bad.types", "sig.figs", "INPUT.DIR", "OUTPUT.DIR") ~ "N/A",
+  .default = "N"
+  ))
+
+# Corresponding single-entry parameter 
+req_cols <- req_cols %>% 
+  mutate("Corresp. single-entry Parameter" = ifelse(.data[[vars[[2]]]] == "N", 
+                                                    gsub(".col" ,"", Parameter), NA))
+
+# Brief description 
+description <- c("Output and/or input filename",
+                 "Level 0 data frame", 
+                 "Lab sample name", 
+                 "Lab test compound name (abbr.)",
+                 "EPA's DSSTox Structure ID",
+                 "Lab measurement date",
+                 "Formal test compound name",
+                 "Target analyte peak area",
+                 "Internal standard peak area",
+                 "Sample type (Blank/D0/D2/R2)",
+                 "Experiment direction",
+                 "Membrane area",
+                 "Receiver compartment volume",
+                 "Donor compartment volume",
+                 "Test chemical concentration",
+                 "MS calibration",
+                 "Number of times sample was diluted",
+                 "Time before compartments were measured",
+                 "Internal standard name",
+                 "Internal standard concentration",
+                 "Initial test chemical concentration added to donor",
+                 "Replicates with the same analyte",
+                 "Repeated measurements from one sample",
+                 "Analytical chemistry analysis method",
+                 "Analytical chemistry analysis instrument",
+                 "Analytical chemistry analysis parameters",
+                 "Additional notes",
+                 "Raw data filename",
+                 "Raw data sheet name",
+                 "Export restuls (TSV)?",
+                 "Export bad data (TSV)?",
+                 "Input directory of Level 0 file",
+                 "Export directory to save Level 1 files")
+req_cols[, "Descr."] <- description
+
+```
+
+```{r, echo = FALSE}
+req_cols %>% 
+  flextable() %>% 
+  bg(bg = "#DDDDDD", part = "header") %>% 
+  autofit() %>% 
+  set_table_properties(
+    opts_html = list(
+      scroll = list(height = 200)
+      )
+  ) %>% 
+  set_caption("Table 2: Level 1 parameters", align_with_table = FALSE) %>% 
+  theme_vanilla
+```
+
+By default, a TSV file containing the Level 1 data is exported to the user's directory. We have omitted this export with `outpur.res = FALSE`. The option to omit exporting a TSV file is also available at Levels 2 and 3 and will be used from this point forward. 
+
 ```{r L1 processing}
 # Manually add note column
 caco2_L0_curated <- caco2_L0 %>% 
   mutate(Note = "")
+
+caco2_L0_curated[1, "Type"] <- "TEST" 
+
+
+data.out <- caco2_L0_curated
+type.col = "Type"
+
+req.types=c("Blank","D0","D2","R2")
+data.in <- subset(data.out,data.out[,type.col] %in% req.types)
+data.in.badtype <- subset(data.out,!(data.out[,type.col] %in% req.types))
 
 caco2_L1_curated <- format_caco2(FILENAME = "Caco2_vignette",
                                  data.in = caco2_L0_curated,
@@ -85,13 +195,16 @@ caco2_L1_curated <- format_caco2(FILENAME = "Caco2_vignette",
                                  nominal.test.conc = 10,
                                  analysis.instrument = "Agilent.GCMS",
                                  analysis.parameters = "Unknown",
-                                 # don't return output .tsv file
-                                 output.res = FALSE
+                                 # don't export output TSV file
+                                 output.res = FALSE,
+                                 save.bad.types = TRUE
                                  )
 ```
 
+
+
 Our Level 1 data is nicely formatted and contains all of the information we provided in `format_caco2`
-```{r, echo = FALSE}
+```{r, eval = FALSE}
 head(caco2_L1_curated, n = 3) %>% 
   kable(caption = "Level 1 data") %>% 
   scroll_box(width = "100%")
